rewrite version handler for easier per-DataVersion implementations / use FileChannel to load mca files for rendering